# Gaijin_test_task

./: CMakeLists.txt  Server.cpp  Server.h  Storage.cpp  Storage.h  client.cpp  config.txt  main.cpp  readme.txt
testdata/: config.txt
